Added contentFor hook for redirection.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "index-redirect",
+  "name": "ember-cli-index-redirect",
   "dependencies": {
     "ember": "~2.9.0",
     "ember-cli-shims": "0.1.3"
